[package]
name = "certhing"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = "0.10"
clap = { version = "4.5.31", features = ["derive"] }
beef = "0.5.2"
oqs = "0.10.1"
thiserror = "2.0.12"
bincode = { version = "2.0.1", features = ["serde"] } 
serde = { version = "1.0.219", features = ["derive"] }
asn1 = "0.21.0"

[dev-dependencies]
tempfile = "3.18.0"

[lib]
name = "certhing"
path = "src/lib.rs"

[[bin]]
name = "certhing"
path = "src/main.rs"

[lints.rust]
unused = "allow"
